[gd_scene load_steps=30 format=3 uid="uid://6q7x72nvtr1d"]

[ext_resource type="Texture2D" uid="uid://btn7qgqgxf6u0" path="res://Scenes/Player/PlayerResources/Cat Revamped Run Latest-Sheet.png" id="1_ud1qu"]
[ext_resource type="Script" path="res://Scenes/Player/Scripts/player.gd" id="1_xiil8"]
[ext_resource type="Texture2D" uid="uid://c8fmym2xxtqi3" path="res://Scenes/Player/PlayerResources/CatDeath-Sheet.png" id="2_hkqco"]
[ext_resource type="AudioStream" uid="uid://xyh8vl424sxa" path="res://Sounds/PlayerSounds/Cartoon Jump Sound Effect.wav" id="3_hwcvs"]
[ext_resource type="Texture2D" uid="uid://d1bd5d6ew18ok" path="res://Scenes/Player/PlayerResources/Cat Revamped Sit Latest Remade-Sheet.png" id="3_ugn78"]
[ext_resource type="Texture2D" uid="uid://b0fj48op2bmlb" path="res://Scenes/Player/PlayerResources/Cat Revamped Jump Latest-Sheet.png" id="4_0vvsb"]
[ext_resource type="AudioStream" uid="uid://b7gunpp3topl1" path="res://Sounds/PlayerSounds/cat---hurt-3-made-with-Voicemod.mp3" id="4_iog7v"]
[ext_resource type="AudioStream" uid="uid://uhowlrv67jbh" path="res://Sounds/PlayerSounds/CatDied.mp3" id="5_yysmc"]
[ext_resource type="PackedScene" uid="uid://d4fdahrrfbqo8" path="res://Scenes/Player/HUD.tscn" id="6_qbgmn"]
[ext_resource type="Texture2D" uid="uid://cw5w2gskqgfxq" path="res://Scenes/Player/PlayerResources/CatRunningM9-Sheet.png" id="6_v3nft"]
[ext_resource type="AudioStream" uid="uid://beqqqeo2ihek5" path="res://Sounds/PlayerSounds/Walk_Run.wav" id="10_31176"]
[ext_resource type="PackedScene" uid="uid://b2klrbwx37se0" path="res://Scenes/Player/diedScreen.tscn" id="12_kdwmr"]
[ext_resource type="AudioStream" uid="uid://cbxsvpppul1ce" path="res://Sounds/SFX/teleporter-102110.ogg" id="13_oytrg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqame"]
radius = 29.0172

[sub_resource type="AtlasTexture" id="AtlasTexture_k340j"]
atlas = ExtResource("1_ud1qu")
region = Rect2(0, 0, 378, 42)

[sub_resource type="Animation" id="Animation_tobiv"]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("2_hkqco")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_86bxy"]
resource_name = "Idle"
length = 1.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ugn78")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_4qufu"]
resource_name = "Jump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("4_0vvsb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_71q3t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [SubResource("AtlasTexture_k340j")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_8uk3v"]
resource_name = "Run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("6_v3nft")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0693586, 0.141781, 0.219311, 0.300926, 0.382541, 0.464157),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Running")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.924647,
"start_offset": 0.182216,
"stream": ExtResource("10_31176")
}, {
"end_offset": 0.924647,
"start_offset": 0.182216,
"stream": ExtResource("10_31176")
}],
"times": PackedFloat32Array(0.0445233, 0.431995)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_chs08"]
resource_name = "spawn"
length = 5.0
step = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08y3x"]
_data = {
"Death": SubResource("Animation_tobiv"),
"Idle": SubResource("Animation_86bxy"),
"Jump": SubResource("Animation_4qufu"),
"RESET": SubResource("Animation_71q3t"),
"Run": SubResource("Animation_8uk3v"),
"spawn": SubResource("Animation_chs08")
}

[sub_resource type="Gradient" id="Gradient_vr01i"]
colors = PackedColorArray(1, 1, 1, 0.329412, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1ynmq"]
gradient = SubResource("Gradient_vr01i")
use_hdr = true
fill = 1
fill_from = Vector2(0.510204, 0.5)
fill_to = Vector2(0.250712, 0.646724)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ppn0k"]
polygon = PackedVector2Array(-8, 21, -8, 16, 13, 16, 13, 21)

[sub_resource type="Gradient" id="Gradient_rbfao"]
offsets = PackedFloat32Array(0.0258065, 0.677419, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.953642, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rn5qn"]
gradient = SubResource("Gradient_rbfao")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.6, 0.4)
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_aobkh"]
_data = [Vector2(0.00277778, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8an2k"]
offsets = PackedFloat32Array(0, 0.434783, 0.807453)
colors = PackedColorArray(0, 1, 1, 1, 0.278431, 0.14902, 1, 1, 1, 0, 0, 1)

[node name="PlayerNode" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
script = ExtResource("1_xiil8")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Player"]
polygon = PackedVector2Array(2, 21, 5, 20, 6, 18, 9, 13, 7, 7, 2, 7, -4, 7, -6, 13, -3, 18, -2, 20, 0, 21)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2.3, 2.3)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="Running" type="AudioStreamPlayer2D" parent="Player"]
volume_db = -17.198

[node name="Jumping" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("3_hwcvs")
volume_db = -13.867
pitch_scale = 2.06

[node name="Hurt" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("4_iog7v")
volume_db = -6.923

[node name="Died" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("5_yysmc")
volume_db = 0.045

[node name="Timer" type="Timer" parent="Player"]
wait_time = 5.0

[node name="DeathTimer" type="Timer" parent="Player"]

[node name="Body" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Body"]
shape = SubResource("CircleShape2D_aqame")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = SubResource("AtlasTexture_k340j")
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_08y3x")
}
autoplay = "Idle"

[node name="CanvasLayer" parent="Player" instance=ExtResource("6_qbgmn")]
visible = false

[node name="Marker2D" type="Marker2D" parent="Player"]

[node name="PointLight2D" type="PointLight2D" parent="Player"]
visible = false
position = Vector2(0, 6)
energy = 0.2
shadow_enabled = true
texture = SubResource("GradientTexture2D_1ynmq")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
occluder = SubResource("OccluderPolygon2D_ppn0k")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player"]
position = Vector2(0, -2)
scale = Vector2(0.3, 0.3)
emitting = false
amount = 200
one_shot = true
speed_scale = 1.5
randomness = 1.0
fixed_fps = 60
texture = SubResource("GradientTexture2D_rn5qn")
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2(0, -2)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 198.88
scale_amount_min = 0.0
scale_amount_curve = SubResource("Curve_aobkh")
color_ramp = SubResource("Gradient_8an2k")

[node name="DiedScreen" parent="Player" instance=ExtResource("12_kdwmr")]
visible = false

[node name="Spawn" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("13_oytrg")

[node name="SpawnTime" type="Timer" parent="Player"]
wait_time = 4.0

[node name="Teleport" type="Node2D" parent="."]

[connection signal="timeout" from="Player/Timer" to="Player" method="_on_timer_timeout"]
[connection signal="timeout" from="Player/DeathTimer" to="Player" method="_on_death_timer_timeout"]
[connection signal="body_entered" from="Player/Body" to="Player" method="_on_body_body_entered"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="Player" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Player/SpawnTime" to="Player" method="_on_spawn_time_timeout"]
